--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <div class="bg-primary/90 text-white text-xs md:text-sm py-2 overflow-hidden relative z-50 border-b border-white/10 backdrop-blur-sm">
             <div class="flex whitespace-nowrap">
                 <div class="marquee flex gap-16 px-4 font-bold items-center">
-                    <span class="flex items-center gap-2">🎉 مرحبًا بكم في متجر ZELDAW!</span>
+                    <span class="flex items-center gap-2">🎉 مرحبًا بكم في متجر Pixel !</span>
                     <span class="flex items-center gap-2">💎 خصومات حصرية لفترة محدودة على الرتب</span>
                     <span class="flex items-center gap-2">🚀 انضم إلى سيرفر الديسكورد لمعرفة آخر الأخبار</span>
                     <span class="flex items-center gap-2">🎮 استمتع بأفضل تجربة لعب في ماينكرافت</span>
                     <!-- Duplicate -->
-                    <span class="flex items-center gap-2">🎉 مرحبًا بكم في متجر ZELDAW!</span>
+                    <span class="flex items-center gap-2">🎉 مرحبًا بكم في متجر Pixel !</span>
                     <span class="flex items-center gap-2">💎 خصومات حصرية لفترة محدودة على الرتب</span>
                     <span class="flex items-center gap-2">🚀 انضم إلى سيرفر الديسكورد لمعرفة آخر الأخبار</span>
                     <span class="flex items-center gap-2">🎮 استمتع بأفضل تجربة لعب في ماينكرافت</span>
@@ -55,7 +55,7 @@
                     <!-- Logo -->
                     <a href="#" class="text-xl font-bold text-white flex items-center gap-2 hover:scale-105 transition-transform">
                         <span class="text-primary text-2xl drop-shadow-[0_0_10px_rgba(88,101,242,0.5)]">⚡</span>
-                        ZELDAW Store
+                        Pixel  Store
                     </a>
 
                     <!-- Desktop Nav -->
