--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h3 class="text-2xl font-bold text-primary">التواصل والدعم الفني</h3>
                         <p class="text-gray-400">للتواصل معنا تعال هنا و اتفح تكت</p>
                     </div>
-                    <button onclick="window.open('https://discord.gg/placeholder', '_blank')" class="w-full h-14 text-lg font-bold bg-[#5865F2] hover:bg-[#4752C4] shadow-lg shadow-[#5865F2]/20 transition-all hover:scale-105 rounded-lg flex items-center justify-center gap-2 text-white">
+                    <button onclick="window.open('https://discord.com/channels/1426180827011743757/1449037953341984768', '_blank')" class="w-full h-14 text-lg font-bold bg-[#5865F2] hover:bg-[#4752C4] shadow-lg shadow-[#5865F2]/20 transition-all hover:scale-105 rounded-lg flex items-center justify-center gap-2 text-white">
                         <i data-lucide="message-circle" class="w-6 h-6"></i>
                         انقر هنا لفتح تذكرة على ديسكورد
                     </button>
@@ -325,7 +325,7 @@
     <footer class="py-12 bg-black/40 border-t border-white/10">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-2xl font-bold text-white mb-4 flex justify-center items-center gap-2">
-                <span class="text-primary">⚡</span> ZELDAW Store
+                <span class="text-primary">⚡</span> Pixle Store
             </h2>
             <p class="text-gray-400 mb-8">جميع الحقوق محفوظة © 2025</p>
             <div class="flex justify-center gap-6 text-sm text-gray-500">
