--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <i data-lucide="zap" class="w-7 h-7"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-center text-white">سيف ضعيف </h3>
-                    <p class="text-2xl font-bold text-primary text-center mb-6">25$</p>
+                    <p class="text-2xl font-bold text-primary text-center mb-6">1 مليون كريديت$</p>
                     <button class="w-full mt-6 bg-white/5 hover:bg-primary hover:text-white border border-white/10 transition-all py-2 rounded-lg text-white">شراء الآن</button>
                 </div>
                  <div class="glass p-6 rounded-2xl hover:bg-white/5 transition-all group cursor-pointer border border-white/5 hover:border-primary/50 hover:-translate-y-2">
@@ -237,14 +237,6 @@
                         <i data-lucide="zap" class="w-7 h-7"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-center text-white">سيف متوسط </h3>
-                    <p class="text-2xl font-bold text-primary text-center mb-6">1 مليون كريديت </p>
-                    <button class="w-full mt-6 bg-white/5 hover:bg-primary hover:text-white border border-white/10 transition-all py-2 rounded-lg text-white">شراء الآن</button>
-                </div>
-                 <div class="glass p-6 rounded-2xl hover:bg-white/5 transition-all group cursor-pointer border border-white/5 hover:border-primary/50 hover:-translate-y-2">
-                    <div class="w-14 h-14 rounded-xl bg-primary/10 flex items-center justify-center mb-6 text-primary group-hover:scale-110 transition-transform mx-auto">
-                        <i data-lucide="zap" class="w-7 h-7"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-2 text-center text-white">سيف قوي  </h3>
                     <p class="text-2xl font-bold text-primary text-center mb-6">1.5 مليون كريديت$</p>
                     <button class="w-full mt-6 bg-white/5 hover:bg-primary hover:text-white border border-white/10 transition-all py-2 rounded-lg text-white">شراء الآن</button>
                 </div>
@@ -252,8 +244,16 @@
                     <div class="w-14 h-14 rounded-xl bg-primary/10 flex items-center justify-center mb-6 text-primary group-hover:scale-110 transition-transform mx-auto">
                         <i data-lucide="zap" class="w-7 h-7"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2 text-center text-white">سيف اسطوري </h3>
+                    <h3 class="text-xl font-bold mb-2 text-center text-white">سيف قوي  </h3>
                     <p class="text-2xl font-bold text-primary text-center mb-6">2 مليون كريديت$</p>
+                    <button class="w-full mt-6 bg-white/5 hover:bg-primary hover:text-white border border-white/10 transition-all py-2 rounded-lg text-white">شراء الآن</button>
+                </div>
+                 <div class="glass p-6 rounded-2xl hover:bg-white/5 transition-all group cursor-pointer border border-white/5 hover:border-primary/50 hover:-translate-y-2">
+                    <div class="w-14 h-14 rounded-xl bg-primary/10 flex items-center justify-center mb-6 text-primary group-hover:scale-110 transition-transform mx-auto">
+                        <i data-lucide="zap" class="w-7 h-7"></i>
+                    </div>
+                    <h3 class="text-xl font-bold mb-2 text-center text-white">سيف اسطوري </h3>
+                    <p class="text-2xl font-bold text-primary text-center mb-6">2.5 مليون كريديت$</p>
                     <button class="w-full mt-6 bg-white/5 hover:bg-primary hover:text-white border border-white/10 transition-all py-2 rounded-lg text-white">شراء الآن</button>
                 </div>
             </div>
