--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <i data-lucide="home" class="w-7 h-7"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-center text-white">منزل أسطوري 1</h3>
-                    <p class="text-2xl font-bold text-primary text-center mb-6">50$</p>
+                    <p class="text-2xl font-bold text-primary text-center mb-6">550 الف كريديت$</p>
                     <ul class="space-y-3 text-sm text-gray-400">
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> حماية كاملة</li>
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> تصميم عصري</li>
@@ -187,7 +187,7 @@
                         <i data-lucide="home" class="w-7 h-7"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-center text-white">منزل أسطوري 2</h3>
-                    <p class="text-2xl font-bold text-primary text-center mb-6">100$</p>
+                    <p class="text-2xl font-bold text-primary text-center mb-6">575 الف كريديت$</p>
                     <ul class="space-y-3 text-sm text-gray-400">
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> حماية كاملة</li>
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> تصميم عصري</li>
@@ -201,7 +201,7 @@
                         <i data-lucide="home" class="w-7 h-7"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-center text-white">منزل أسطوري 3</h3>
-                    <p class="text-2xl font-bold text-primary text-center mb-6">150$</p>
+                    <p class="text-2xl font-bold text-primary text-center mb-6">600 الف كريديت$</p>
                     <ul class="space-y-3 text-sm text-gray-400">
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> حماية كاملة</li>
                         <li class="flex items-center gap-2 justify-center"><i data-lucide="check" class="w-4 h-4 text-green-400"></i> تصميم عصري</li>
